@@ -38,7 +38,9 @@ genfile --file dir/subdir2/file2
 
 tar cf dir.tar dir
 
-tar -x -v -f dir.tar -C out --strip-components=2 --warning=no-timestamp \
+tar -x -v -f dir.tar -C out --strip-components=2 \
+  --warning=no-empty-transform \
+  --warning=no-timestamp \
   dir/subdir1/
 ],
 [0],
